--- a/templates/main_navbar.html
+++ b/templates/main_navbar.html
@@ -3,7 +3,7 @@
 <!-- Header Section -->
 <header class="header">
     <div class="container container--narrow">
-        <a href="{% url 'account' %}" class="header__logo">
+        <a href="{% url 'businesses' %}" class="header__logo">
             {% comment %} <img src="{% static 'images/logo.svg' %} " alt="DevSearch Logo" /> {% endcomment %}
             <h6 style="color:white; font-weight:bold">Local Source</h6
         </a>
