--- a/Users/templates/Users/login_register.html
+++ b/Users/templates/Users/login_register.html
@@ -80,10 +80,10 @@
                     placeholder="••••••••" />
             </div>
 
-            {% comment %} <div class="auth__actions">
+            <div class="auth__actions">
                 <input class="btn btn--sub btn--lg" type="submit" value="Log In" />
-                <a href="{% url 'reset_password' %}">Forget Password?</a>
-            </div> {% endcomment %}
+                {% comment %} <a href="{% url 'reset_password' %}">Forget Password?</a> {% endcomment %}
+            </div>
         </form>
 
         <div class="auth__alternative">
