--- a/templates/admin_navbar.html
+++ b/templates/admin_navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <!-- Header Section -->
-<header class="header">
+<header class="header stciky">
     <div class="container container--narrow">
         <a href="{% url 'account' %}" class="header__logo">
             {% comment %} <img src="{% static 'images/logo.svg' %} " alt="DevSearch Logo" /> {% endcomment %}
